2012-12-21  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>

	* config.gcc: Match arm*-*-uclinux*eabi* for EABI uCLinux.

2012-12-18  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>

	Backport from mainline
	2012-10-15  Matthias Klose  <doko@ubuntu.com>

	* config.gcc: Match arm*-*-linux-* for ARM Linux/GNU.
	* doc/install.texi: Use arm-*-*linux-* instead of arm-*-*linux-gnueabi.

2012-12-16  Eric Botcazou  <ebotcazou@adacore.com>
	    Tomash Brechko  <tomash.brechko@gmail.com>

	PR target/55673
	* config/sparc/sparc.c (sparc_emit_membar_for_model): Fix reversed
	handling of before and after cases.
	* config/sparc/sync.md (atomic_store): Fix pasto.

2012-12-14  Yvan Roux  <yvan.roux@linaro.org>

	* optabs.c (expand_atomic_store): Elide redundant model test.

2012-12-13  Richard Henderson  <rth@redhat.com>

	PR middle-end/55492
	* optabs.c (expand_atomic_load): Emit acquire barrier after the load.

2012-12-11  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/54121
	* config/sparc/sparc.md (tldo_stb_sp32): Fix pasto.
	(tldo_stb_sp64): Likewise.
	(tldo_sth_sp32): Likewise.
	(tldo_sth_sp64): Likewise.
	(tldo_stw_sp32): Likewise.
	(tldo_stw_sp64): Likewise.
	(tldo_stx_sp64): Likewise.

2012-12-10 Kai Tietz  <ktietz@redhat.com>

	PR target/53912
	* print-tree.c (print_node): Cast from pointer via uintptr_t.

2012-12-07  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2012-12-06  Uros Bizjak  <ubizjak@gmail.com>
		    H.J. Lu  <hongjiu.lu@intel.com>

	PR target/55597
	* config/i386/i386.c (legitimize_tls_address): Zero-extend x to Pmode,
	before using it as insn or call equivalent.

2012-12-06  Jason Merrill  <jason@redhat.com>

	PR c++/55032
	* tree.c (build_array_type_1): Re-layout if we found it in the
	hash table.

2012-12-05  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/pa/pa.md: Use "const_int 0" instead of match_test to simplify
	opaque cond in all call insns.

2012-12-03  Eric Botcazou  <ebotcazou@adacore.com>
